[project]
name = "test-serial"
version = "1.0.0"
dependencies = []

[project.optional-dependencies]
test = ["ruff", "pytest"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
lint.select = [
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # Pyflakes
    "Q",   # flake8-quotes
]
lint.ignore = [
    "D203",   # incompatible with D211
    "D213",   # incompatible with D212
    "ANN101", # missing-type-self
    "D107",   # undocumented-public-init
]

[tool.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff.lint.pydocstyle]
convention = "numpy"